# fplpy

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/fplpy/: __init__.py  enrichment.py  formation.py  objects.py  repository.py
src/fplpy/base_objects/: event.py  fixture.py  label.py  player.py  position.py  team.py
src/fplpy/base_objects/elements/: __init__.py  element.py  element.txt
src/fplpy/enrichment/: fixture.py  player.py  player_summary.py  template.py
src/fplpy/err/: types.py
src/fplpy/fplteam/: __init__.py  fpl_team.py  validation.py
src/fplpy/linked_object/: objects.py  template.py
src/fplpy/linked_object/repository/: event.py  fixture.py  label.py  player.py  position.py  team.py
src/fplpy/objects/: summary.py
src/fplpy/objects/_element/: element.py  element_template.py  model.py  repository.py
src/fplpy/objects/chip/: object.py  repository.py
src/fplpy/objects/event/: model.py  object.py  repository.py
src/fplpy/objects/fixture/: __init__.py  model.py  object.py  repository.py
src/fplpy/objects/game_settings/: object.py  repository.py
src/fplpy/objects/label/: model.py  object.py  repository.py
src/fplpy/repository_factory/: general.py  presets.py  template.py
src/fplpy/util/: dataclass.py  dt.py  other.py  typed_ordered_set.py
tests/: test_event.py  test_external.py  test_util.py
tests/object/: test_team.py
tests/objects/: example_data.py  test_foo.py
tests/unlinked_object/: example_data.py  test_foo.py
tests/util/: test_typed_ordered_set.py  util.py
(+50 files in other folders)
