[metadata]
name = fplpy
description = Python interface for Fantasy Premier League API or Vaastav GitHub FPL Repoistory
author = Joseph Williams
platforms = win32, unix, linux
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = 
    fplpy

install_requires = 
    pandas>=1
    requests>=2
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing=
    pytest>=7
    mypy>=0.910
    flake8>=5
    tox>=3.24
    pytest-cov>=3
    types-requests>=2.28
    requests>=2

[options.package_data]
fplpy = py.typed

[flake8]
max-line-length = 160
